--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
+language: cpp
 os: linux
 dist: bionic
-language: c
-script: make
+script:
+  - make
+  - ./a
 compiler: 
-  - gcc
-  - clang
+  - g++
+  - clang++
